--- a/org.fcitx.Fcitx5.Addon.Mozc.yaml
+++ b/org.fcitx.Fcitx5.Addon.Mozc.yaml
@@ -2,7 +2,7 @@ app-id: org.fcitx.Fcitx5.Addon.Mozc
 branch: stable
 runtime: org.fcitx.Fcitx5
 runtime-version: stable
-sdk: org.kde.Sdk//5.15-22.08
+sdk: org.kde.Sdk//6.6
 sdk-extensions:
   - org.freedesktop.Sdk.Extension.llvm14
 build-extension: true
